--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>UZS TO USD</title>
   </head>
   <body class="bg-dark">
     <div class="w-50 mx-auto p-5 bg-light mt-5">
